feat: making sure the auth service works
