# docs/swagger.yaml
@@ -22,11 +22,6 @@ definitions:
     - identityNumber
     - name
     type: object
-  dto.FileUploadRespondPayload:
-    properties:
-      uri:
-        type: string
-    type: object
   dto.GetEmployeesRequest:
     properties:
       departmentID:
@@ -60,45 +55,17 @@ definitions:
     required:
     - name
     type: object
-  dto.RequestUpdateProfile:
-    properties:
-      companyImageUri:
-        type: string
-      companyName:
-        maxLength: 52
-        minLength: 4
-        type: string
-      email:
-        type: string
-      name:
-        maxLength: 52
-        minLength: 4
-        type: string
-      userImageUri:
-        type: string
-    type: object
   dto.UserRequestPayload:
     properties:
-      action:
-        type: string
       email:
         type: string
       password:
+        maxLength: 32
         minLength: 8
         type: string
     required:
-    - action
     - email
     - password
-    type: object
-  dto.UserRequestUpdate:
-    properties:
-      email:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
     type: object
   helper.ErrorResponse:
     properties:
@@ -115,78 +82,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /v1/auth:
-    post:
-      consumes:
-      - application/json
-      description: either create or login
-      parameters:
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserRequestPayload'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: EXISTING
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/helper.Response'
-              type: object
-        "201":
-          description: CREATED
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/helper.Response'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "404":
-          description: Not Found
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "409":
-          description: Conflict
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "500":
-          description: Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-      summary: Entry for authentication or create new user
-      tags:
-      - auth
   /v1/department:
     get:
       consumes:
@@ -658,93 +553,18 @@ paths:
       summary: Delete a employee
       tags:
       - employee
-  /v1/file:
+  /v1/login:
     post:
       consumes:
       - application/json
-      description: Upload an file
+      description: User Login
       parameters:
-      - description: Bearer JWT token
-        in: header
-        name: Authorization
+      - description: data
+        in: body
+        name: data
         required: true
-        type: string
-      - description: Body with file zip
-        in: formData
-        name: File
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: File uploaded successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.FileUploadRespondPayload'
-              type: object
-        "201":
-          description: File created successfully
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/dto.FileUploadRespondPayload'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "401":
-          description: Unauthorized - Missing or invalid token
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "413":
-          description: Payload Too Large
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "415":
-          description: Unsupported Media Type
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-      summary: Upload an file
-      tags:
-      - file
-  /v1/user:
-    delete:
-      consumes:
-      - application/json
-      description: Delete user
-      parameters:
-      - description: Bearer + user token
-        in: header
-        name: Authorization
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/dto.UserRequestPayload'
       produces:
       - application/json
       responses:
@@ -766,15 +586,6 @@ paths:
                 errors:
                   $ref: '#/definitions/helper.ErrorResponse'
               type: object
-        "401":
-          description: Unauthorization
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
         "404":
           description: Not Found
           schema:
@@ -784,9 +595,73 @@ paths:
                 errors:
                   $ref: '#/definitions/helper.ErrorResponse'
               type: object
-      summary: Delete user
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ErrorResponse'
+              type: object
+      summary: User Login
       tags:
-      - users
+      - auth
+  /v1/register:
+    post:
+      consumes:
+      - application/json
+      description: User Register
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserRequestPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/helper.Response'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ErrorResponse'
+              type: object
+        "409":
+          description: Conflict
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ErrorResponse'
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.Response'
+            - properties:
+                errors:
+                  $ref: '#/definitions/helper.ErrorResponse'
+              type: object
+      summary: User Register
+      tags:
+      - auth
+  /v1/user:
     get:
       consumes:
       - application/json
@@ -828,104 +703,6 @@ paths:
                   $ref: '#/definitions/helper.ErrorResponse'
               type: object
       summary: Get Profile User
-      tags:
-      - users
-    patch:
-      consumes:
-      - application/json
-      description: Update profile
-      parameters:
-      - description: Bearer + user token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.RequestUpdateProfile'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/helper.Response'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "401":
-          description: Unauthorization
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-      summary: Update profile
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: Update user
-      parameters:
-      - description: Bearer + user token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserRequestUpdate'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/helper.Response'
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-        "401":
-          description: Unauthorization
-          schema:
-            allOf:
-            - $ref: '#/definitions/helper.Response'
-            - properties:
-                errors:
-                  $ref: '#/definitions/helper.ErrorResponse'
-              type: object
-      summary: Update user
       tags:
       - users
 swagger: "2.0"
